<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="6dp"
        android:background="@drawable/bottom_sheet_divider" />

    <TextView
        android:id="@+id/textDescriptionFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sort"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioButtonParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/alphabetically"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alphabetically" />

        <RadioButton
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value" />

        <RadioButton
            android:id="@+id/kotlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultt" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioButtonChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending" />

        <RadioButton
            android:id="@+id/descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending" />
    </RadioGroup>
</LinearLayout>